--- a/SimpleWaf/server_client/new_web_server/templates/preferences.html
+++ b/SimpleWaf/server_client/new_web_server/templates/preferences.html
@@ -52,40 +52,41 @@
 <body>
 
     <h2>Preferences Settings</h2>
+	<h4>hover on elements to see details</h4>
     
     <form id="preferencesForm">
-        <label for="file_attack_level">File Attack Level:</label>
-        <input type="number" id="file_attack_level" value="{{ data.file_attack_level }}" min="1" max="5">
+        <label for="file_attack_level" title="">File Attack Level:</label>
+        <input type="number" id="file_attack_level" value="{{ data.file_attack_level }}" min="0" max="2">
 
-        <label for="host_name">Host Name:</label>
-        <input type="text" id="host_name" value="{{ data.host_name }}">
+        <label for="host_name"  title="you can not change host name :(">Host Name:</label>
+        <input type="text" id="host_name" disabled=true value="{{ data.host_name }}">
 
         <div class="toggle-container">
-            <label for="hpp_defence">HPP Defence:</label>
+            <label for="hpp_defence" title="not supported right now.">HPP Defence:</label>
             <input type="checkbox" id="hpp_defence" {% if data.hpp_defence %}checked{% endif %}>
         </div>
 
         <div class="toggle-container">
-            <label for="isHttps">HTTPS:</label>
+            <label for="isHttps" title="if your web runs on https, mark this. if it does not, unmark this.">HTTPS:</label>
             <input type="checkbox" id="isHttps" {% if data.isHttps %}checked{% endif %}>
         </div>
 
-        <label for="os_level">OS Level:</label>
-        <input type="number" id="os_level" value="{{ data.os_level }}" min="1" max="5">
+        <label for="os_level" title="number from 0-2&#10 0-Linux defence&#10 1-Windows defence&#10 2- other, no defnce">OS Level:</label>
+        <input type="number" id="os_level" value="{{ data.os_level }}" min="0" max="2">
 
-        <label for="port">Port:</label>
+        <label for="port" title="The port that your web runs on.&#10;If you are using http it most likely 80, if you are using https probably - 443">Port:</label>
         <input type="number" id="port" value="{{ data.port }}">
 
         <label for="sql_level">SQL Level:</label>
-        <input type="number" id="sql_level" value="{{ data.sql_level }}" min="1" max="5">
+        <input type="number" id="sql_level" value="{{ data.sql_level }}" min="0" max="2">
 
         <div class="toggle-container">
-            <label for="to_send_email">Send Email Notifications:</label>
+            <label for="to_send_email" title="when web get attacked the WAF will notify you based on your email">Send Email Notifications:</label>
             <input type="checkbox" id="to_send_email" {% if data.to_send_email %}checked{% endif %}>
         </div>
 
         <div class="toggle-container">
-            <label for="xss_defence">XSS Defence:</label>
+            <label for="xss_defence" title="The WAF will replace all '<' and '>' to prevent attacks">XSS Defence:</label>
             <input type="checkbox" id="xss_defence" {% if data.xss_defence %}checked{% endif %}>
         </div>
 
