add the email sender from the branch email sending

--- a/SimpleWaf/server_client/new_web_server/templates/preferences.html
+++ b/SimpleWaf/server_client/new_web_server/templates/preferences.html
@@ -55,7 +55,7 @@
 	<h4>hover on elements to see details</h4>
     
     <form id="preferencesForm">
-        <label for="file_attack_level" title="">File Attack Level:</label>
+        <label for="file_attack_level" title="0-no defence&#10 1- file travesal scanner&#10 2-WAF will block files with uncommon file formats">File Attack Level:</label>
         <input type="number" id="file_attack_level" value="{{ data.file_attack_level }}" min="0" max="2">
 
         <label for="host_name"  title="you can not change host name :(">Host Name:</label>
