--- a/SimpleWaf/server_client/new_web_server/templates/log_file.html
+++ b/SimpleWaf/server_client/new_web_server/templates/log_file.html
@@ -41,7 +41,7 @@
             <tr>
                 <th>Timestamp</th>
                 <th>Domain</th>
-                <th>IP Address</th>
+                <th>Attacker IP</th>
                 <th>Attack Type</th>
                 <th>Timeout</th>
             </tr>
